@@ -1,8 +1,13 @@
+2010-03-18 Shlomi Fish <shlomif@iglu.org.il>
+	* Applied a patch by Steffen Ullrich, fixing:
+	https://rt.cpan.org/Ticket/Display.html?id=54656
+	* New Release IO-Socket-INET6-2.58
+
 2009-11-23 Shlomi Fish <shlomif@iglu.org.il>
 	* Applied a modified version of a patch by Matthew Horsfall 
 	<wolfsage@gmail.com> in order to add t/blocking.t and deal with the
 	blocking sockets properly.
-	* New Release IO-Scoket-INET6-2.57
+	* New Release IO-Socket-INET6-2.57
 
 2008-10-06 Shlomi Fish <shlomif@iglu.org.il>
 	* Applied a modified version of a patch by Anicka Bernathova
